CF-648: Fix nav bar to top on mobile

--- a/src/shared/assets/styles/components/_layout.scss
+++ b/src/shared/assets/styles/components/_layout.scss
@@ -13,6 +13,8 @@
     flex-direction: column;
 
     > .content {
+      padding-top: 55px;
+
       &.overlay-active {
         overflow: hidden;
       }
