--- a/src/shared/assets/styles/components/_sidebar.scss
+++ b/src/shared/assets/styles/components/_sidebar.scss
@@ -121,6 +121,11 @@
     align-items: center;
     z-index: 999;
 
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
     .menu-logo {
       flex: 1;
       margin: 0;
